--- a/FinalProject-desktop/.project
+++ b/FinalProject-desktop/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>assets</name>
+			<type>2</type>
+			<location>C:/Users/Michael/Documents/CISC3660_FinalProject/groupcfinalproject/FinalProject-core/assets</location>
+		</link>
+	</linkedResources>
 </projectDescription>
