support for grid file reading, fixed getTile() function, added game object deletion support

--- a/FinalProject-desktop/.project
+++ b/FinalProject-desktop/.project
@@ -16,9 +16,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>assets</name>
+			<name>FinalProject-core</name>
 			<type>2</type>
-			<location>C:/Users/abie/Desktop/school/CISC3660FinalProj/groupcfinalproject/FinalProject-core/assets</location>
+			<location>C:/Users/Michael/Documents/CISC3660_FinalProject/groupcfinalproject/FinalProject-core/assets</location>
 		</link>
 	</linkedResources>
 </projectDescription>
