--- a/FinalProject-desktop/.classpath
+++ b/FinalProject-desktop/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="src" path="/FinalProject-core"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="src" path="assets"/>
+	<classpathentry kind="src" path="FinalProject-core"/>
 	<classpathentry kind="lib" path="lib/gdx-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/gdx-backend-lwjgl-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/gdx-platform-1.3.1-natives-desktop.jar"/>
